# holohub

benchmarks/: CMakeLists.txt
benchmarks/green_context_benchmarking/: CMakeLists.txt  green_context_benchmark.cpp  metadata.json
benchmarks/green_context_inference_latency/: CMakeLists.txt  README.md  generate_onnx_model.py  inference_scheduling_benchmark.cpp  inference_scheduling_benchmark.yaml  metadata.json  run_sweep.sh
benchmarks/green_context_trt_benchmarking/: CMakeLists.txt  README.md  benchmark_cuda_kernel.cu  benchmark_cuda_kernel.cu.hpp  cupti_profiler.hpp  generate_onnx_model.py  green_context_trt_benchmark.cpp  green_context_trt_benchmark.yaml  metadata.json  run_sweep.sh
